// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/cascader/demo/basic.md correctly 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/change-on-select.md correctly 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/custom-render.md correctly 1`] = `
<span
  class="ant-cascader-picker"
  style="width:100%"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  >
    <span>
      Zhejiang / 
    </span>
    <span>
      Hangzhou / 
    </span>
    <span>
      West Lake (
      <a>
        752100
      </a>
      )
    </span>
  </span>
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-close ant-cascader-picker-clear"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="close"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
      />
    </svg>
  </i>
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/custom-trigger.md correctly 1`] = `
<span>
  Unselect 
  <a
    href="#"
    tabindex="0"
  >
    Change city
  </a>
</span>
`;

exports[`renders ./components/cascader/demo/default-value.md correctly 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  >
    Zhejiang / Hangzhou / West Lake
  </span>
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-close ant-cascader-picker-clear"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="close"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
      />
    </svg>
  </i>
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/disabled-option.md correctly 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/fields-name.md correctly 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/hover.md correctly 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/lazy.md correctly 1`] = `
<span
  class="ant-cascader-picker"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    readonly=""
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/search.md correctly 1`] = `
<span
  class="ant-cascader-picker ant-cascader-picker-show-search"
  tabindex="0"
>
  <span
    class="ant-cascader-picker-label"
  />
  <input
    autocomplete="off"
    class="ant-input ant-cascader-input "
    placeholder="Please select"
    type="text"
    value=""
  />
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="down"
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/cascader/demo/size.md correctly 1`] = `
<div>
  <span
    class="ant-cascader-picker ant-cascader-picker-large"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input ant-input-lg"
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
        />
      </svg>
    </i>
  </span>
  <br />
  <br />
  <span
    class="ant-cascader-picker"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input "
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
        />
      </svg>
    </i>
  </span>
  <br />
  <br />
  <span
    class="ant-cascader-picker ant-cascader-picker-small"
    tabindex="0"
  >
    <span
      class="ant-cascader-picker-label"
    />
    <input
      autocomplete="off"
      class="ant-input ant-cascader-input ant-input-sm"
      placeholder="Please select"
      readonly=""
      type="text"
      value=""
    />
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
        />
      </svg>
    </i>
  </span>
  <br />
  <br />
</div>
`;
